# 500locol-ecs

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  README.md  WORKSPACE  dsecs.cpp  dsecs.hpp  example.cpp  manuscript.md  notes.md  tests.cpp
01_trinity/: dsecs_01.hpp  example_01.cpp
03_trinity/: dsecs_03.hpp  example_03.cpp
0e_ergonomics1/: dsecs_0e.hpp  example_0e.cpp
1q_queries/: dsecs_1q.hpp  example_1q.cpp
1s_sparsemap/: dsecs_1s.hpp  example_1s.cpp
9z_zero/: dsecs_9z.hpp  example_9z.cpp
benchmark/: bench.hpp
benchmark/500locol/: locol.hpp  locol01.cpp  locol03.cpp  locol0e.cpp  locol1s.cpp  locol9z.cpp  locolcw.cpp
benchmark/entt/: entt.cpp
benchmark/flecs/: flecs.cpp  flecs_c.cpp  flecs_cpp.cpp
benchmark/picoecs/: picoecs.cpp
compat/: flat_map  format
