CPP20OPTS = select({
    "@bazel_tools//src/conditions:windows": ["/std:c++20"],
    "//conditions:default": [
        "-std=c++20",
    ],
})

cc_library(
    name = "dsecs",
    hdrs = ["dsecs.hpp"],
    copts = CPP20OPTS,
)

cc_test(
    name = "test",
    deps = [":dsecs", "@catch//:single_include"],
    srcs = ["tests.cpp"],
    copts = CPP20OPTS,
)

cc_binary(
    name = "example",
    deps = [":dsecs"],
    srcs = ["example.cpp"],
    copts = CPP20OPTS,
)
